@@ -1,0 +1,4 @@
+
+	/*  $Id: automachine_tail.cc,v 1.1 2007-11-22 16:53:10 debug Exp $  */
+}
+
